# stratos

./: .gitignore  config.example.py  config.py  main.py  pyproject.toml
src/: file_listener.py  file_service.py  listener_service.py  utils.py
src/database/: vector_store.py
src/embedding/: embed.py  extractor.py  listener.py
src/embedding/providers/: ollama.py
src/file_store/: vector_store.py
src/ingest/: chunker.py  embed.py  file_service.py  file_store.py  item.py
src/llm/: llm_actions.py  llm_client.py
src/preprocessors/: extractor.py
src/types/: file_record.py
src/vector_store/: vector_store.py
src/vector_store/embedding/: ollama.py
