[project]
name = "stratos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-chroma>=0.2.5",
    "langchain-core>=0.3.74",
    "langchain-ollama>=0.3.7",
    "langchain-text-splitters>=0.3.9",
    "ollama>=0.5.3",
    "pillow>=11.3.0",
    "pymupdf>=1.26.4",
    "typer>=0.17.3",
    "watchdog>=6.0.0",
]
